fix dropdown visibility inside panel

--- a/packages/ui-kit/src/Panel/style.module.css
+++ b/packages/ui-kit/src/Panel/style.module.css
@@ -35,7 +35,7 @@
 
 .contentContainer {
   height: 100%;
-  overflow: auto;
+  overflow: visible;
 }
 
 .panelIcon {
